--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <meta name="theme-color" content="#000000" />
     <meta charset="UTF-8" />
-    <title>BETA SAVINGS</title>
+    <title>Penny Pincher</title>
   </head>
   <body>
     <script type="module" src="/src/renderer.js"></script>
